# GameEngine

./: .gitignore  .gitmodules  Build.sh  CMakeLists.txt  GameEngine.sln  Install Dependencies.bat  Setup.sh  readme.md
Core/: CMakeLists.txt  Core.vcxproj  Engine.h  Test.cpp  Test.h
Core/Classes/: Camera.h  Shader.cpp  Shader.h
Core/Debug/: Debugging.h
Core/Model/: Mesh.h  Model.h  Object.h  ObjectsHandler.cpp  ObjectsHandler.h
Core/Object/: Behaviour.cpp  Behaviour.h  Object.cpp  Object.h
Core/Renderer/: Renderer.cpp  Renderer.h
Core/UI/: ImGuiHandler.h
Core/Util/: VectContainer.hpp
Core/src/: Engine.cpp  Engine.h  Project.h
Core/src/Graphics/: Renderer.cpp  Renderer.h
Core/src/Scene/: Scene.cpp  Scene.h
Core/x64/Debug/Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Core/x64/Release/Core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Editor/: CMakeLists.txt
Runtime/: CMakeLists.txt  main.cpp
Runtime/src/: main.cpp
Test Game/: Test Game.cpp  Test Game.vcxproj  Test Game.vcxproj.filters  Test.h  imgui.ini
Test Game/Assets/Box/: box.mtl
Test Game/Assets/Defaults/: Blender_Monkey.fbx  Cone.fbx  Cube.fbx  Cylinder.fbx  Sphere.fbx  Torus.fbx
Test Game/Shader/: shader.frag  shader.vert
Test Game/x64/Debug/: Test Game.exe.recipe  Test Game.vcxproj.FileListAbsolute.txt  vc143.idb
Test Game/x64/Debug/Test Game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Test Game.lastbuildstate  Test Game.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Test Game/x64/Release/: Test Game.exe.recipe  Test Game.ipdb  Test Game.vcxproj.FileListAbsolute.txt
x64/Debug/: Core.idb  Test Game.exp  Test Game.lib  imgui.ini
x64/Debug/Assets/: Test.fbx
x64/Release/: Test Game.exp  Test Game.lib  imgui.ini
x64/Release/Shader/: shader.frag
(+8 files in other folders)
